--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
   <script src="js/words.js" type="text/javascript"></script>
   <script src="js/wordle-helper.js" type="text/javascript"></script>
   <style>
-    h3 {
-      color: #555;
+    h3, p {
+      color: #444;
     }
     .uk-label-success {
       color: #fff;
@@ -48,55 +48,56 @@
 <body>
   <div class="uk-section uk-section-small">
     <div class="uk-container uk-container-small">
-      <h1 class="uk-heading-bullet"><span>Wordle Helper</span></h1>
+      <h1><span>Wordle Helper</span></h1>
+      <p>By <a href="https://kcamel.io">kcamel.io</a></p>
 
       <form class="uk-margin" uk-margin>
         <h3 class="uk-margin-small-bottom">Correct</h3>
         <p class="uk-margin-small-bottom">Letters that are in the word and in the correct spot.</p>
         <div>
-          <input class="uk-input uk-form-width-xsmall uk-text-bold uk-text-center uk-form-success" type="text" value="." maxlength="1" size="1" id="correct-0">
-          <input class="uk-input uk-form-width-xsmall uk-text-bold uk-text-center uk-form-success" type="text" value="." maxlength="1" size="1" id="correct-1">
-          <input class="uk-input uk-form-width-xsmall uk-text-bold uk-text-center uk-form-success" type="text" value="." maxlength="1" size="1" id="correct-2">
-          <input class="uk-input uk-form-width-xsmall uk-text-bold uk-text-center uk-form-success" type="text" value="." maxlength="1" size="1" id="correct-3">
-          <input class="uk-input uk-form-width-xsmall uk-text-bold uk-text-center uk-form-success" type="text" value="." maxlength="1" size="1" id="correct-4">
+          <input class="uk-input uk-form-width-xsmall uk-text-bold uk-text-center uk-form-success" type="text" value="" maxlength="1" size="1" id="correct-0">
+          <input class="uk-input uk-form-width-xsmall uk-text-bold uk-text-center uk-form-success" type="text" value="" maxlength="1" size="1" id="correct-1">
+          <input class="uk-input uk-form-width-xsmall uk-text-bold uk-text-center uk-form-success" type="text" value="" maxlength="1" size="1" id="correct-2">
+          <input class="uk-input uk-form-width-xsmall uk-text-bold uk-text-center uk-form-success" type="text" value="" maxlength="1" size="1" id="correct-3">
+          <input class="uk-input uk-form-width-xsmall uk-text-bold uk-text-center uk-form-success" type="text" value="" maxlength="1" size="1" id="correct-4">
         </div>
 
         <h3 class="uk-margin-small-bottom uk-margin-medium-top">Present</h3>
         <p class="uk-margin-small-bottom">Letter that are in the word but in the wrong spot.</p>
         <div>
-          <input class="uk-input uk-form-width-xsmall uk-text-bold uk-text-center uk-form-warning" type="text" value="." maxlength="1" size="1" id="present-0-0">
-          <input class="uk-input uk-form-width-xsmall uk-text-bold uk-text-center uk-form-warning" type="text" value="." maxlength="1" size="1" id="present-0-1">
-          <input class="uk-input uk-form-width-xsmall uk-text-bold uk-text-center uk-form-warning" type="text" value="." maxlength="1" size="1" id="present-0-2">
-          <input class="uk-input uk-form-width-xsmall uk-text-bold uk-text-center uk-form-warning" type="text" value="." maxlength="1" size="1" id="present-0-3">
-          <input class="uk-input uk-form-width-xsmall uk-text-bold uk-text-center uk-form-warning" type="text" value="." maxlength="1" size="1" id="present-0-4">
+          <input class="uk-input uk-form-width-xsmall uk-text-bold uk-text-center uk-form-warning" type="text" value="" maxlength="1" size="1" id="present-0-0">
+          <input class="uk-input uk-form-width-xsmall uk-text-bold uk-text-center uk-form-warning" type="text" value="" maxlength="1" size="1" id="present-0-1">
+          <input class="uk-input uk-form-width-xsmall uk-text-bold uk-text-center uk-form-warning" type="text" value="" maxlength="1" size="1" id="present-0-2">
+          <input class="uk-input uk-form-width-xsmall uk-text-bold uk-text-center uk-form-warning" type="text" value="" maxlength="1" size="1" id="present-0-3">
+          <input class="uk-input uk-form-width-xsmall uk-text-bold uk-text-center uk-form-warning" type="text" value="" maxlength="1" size="1" id="present-0-4">
         </div>
         <div>
-          <input class="uk-input uk-form-width-xsmall uk-text-bold uk-text-center uk-form-warning" type="text" value="." maxlength="1" size="1" id="present-1-0">
-          <input class="uk-input uk-form-width-xsmall uk-text-bold uk-text-center uk-form-warning" type="text" value="." maxlength="1" size="1" id="present-1-1">
-          <input class="uk-input uk-form-width-xsmall uk-text-bold uk-text-center uk-form-warning" type="text" value="." maxlength="1" size="1" id="present-1-2">
-          <input class="uk-input uk-form-width-xsmall uk-text-bold uk-text-center uk-form-warning" type="text" value="." maxlength="1" size="1" id="present-1-3">
-          <input class="uk-input uk-form-width-xsmall uk-text-bold uk-text-center uk-form-warning" type="text" value="." maxlength="1" size="1" id="present-1-4">
+          <input class="uk-input uk-form-width-xsmall uk-text-bold uk-text-center uk-form-warning" type="text" value="" maxlength="1" size="1" id="present-1-0">
+          <input class="uk-input uk-form-width-xsmall uk-text-bold uk-text-center uk-form-warning" type="text" value="" maxlength="1" size="1" id="present-1-1">
+          <input class="uk-input uk-form-width-xsmall uk-text-bold uk-text-center uk-form-warning" type="text" value="" maxlength="1" size="1" id="present-1-2">
+          <input class="uk-input uk-form-width-xsmall uk-text-bold uk-text-center uk-form-warning" type="text" value="" maxlength="1" size="1" id="present-1-3">
+          <input class="uk-input uk-form-width-xsmall uk-text-bold uk-text-center uk-form-warning" type="text" value="" maxlength="1" size="1" id="present-1-4">
         </div>
         <div>
-          <input class="uk-input uk-form-width-xsmall uk-text-bold uk-text-center uk-form-warning" type="text" value="." maxlength="1" size="1" id="present-2-0">
-          <input class="uk-input uk-form-width-xsmall uk-text-bold uk-text-center uk-form-warning" type="text" value="." maxlength="1" size="1" id="present-2-1">
-          <input class="uk-input uk-form-width-xsmall uk-text-bold uk-text-center uk-form-warning" type="text" value="." maxlength="1" size="1" id="present-2-2">
-          <input class="uk-input uk-form-width-xsmall uk-text-bold uk-text-center uk-form-warning" type="text" value="." maxlength="1" size="1" id="present-2-3">
-          <input class="uk-input uk-form-width-xsmall uk-text-bold uk-text-center uk-form-warning" type="text" value="." maxlength="1" size="1" id="present-2-4">
+          <input class="uk-input uk-form-width-xsmall uk-text-bold uk-text-center uk-form-warning" type="text" value="" maxlength="1" size="1" id="present-2-0">
+          <input class="uk-input uk-form-width-xsmall uk-text-bold uk-text-center uk-form-warning" type="text" value="" maxlength="1" size="1" id="present-2-1">
+          <input class="uk-input uk-form-width-xsmall uk-text-bold uk-text-center uk-form-warning" type="text" value="" maxlength="1" size="1" id="present-2-2">
+          <input class="uk-input uk-form-width-xsmall uk-text-bold uk-text-center uk-form-warning" type="text" value="" maxlength="1" size="1" id="present-2-3">
+          <input class="uk-input uk-form-width-xsmall uk-text-bold uk-text-center uk-form-warning" type="text" value="" maxlength="1" size="1" id="present-2-4">
         </div>
         <div>
-          <input class="uk-input uk-form-width-xsmall uk-text-bold uk-text-center uk-form-warning" type="text" value="." maxlength="1" size="1" id="present-3-0">
-          <input class="uk-input uk-form-width-xsmall uk-text-bold uk-text-center uk-form-warning" type="text" value="." maxlength="1" size="1" id="present-3-1">
-          <input class="uk-input uk-form-width-xsmall uk-text-bold uk-text-center uk-form-warning" type="text" value="." maxlength="1" size="1" id="present-3-2">
-          <input class="uk-input uk-form-width-xsmall uk-text-bold uk-text-center uk-form-warning" type="text" value="." maxlength="1" size="1" id="present-3-3">
-          <input class="uk-input uk-form-width-xsmall uk-text-bold uk-text-center uk-form-warning" type="text" value="." maxlength="1" size="1" id="present-3-4">
+          <input class="uk-input uk-form-width-xsmall uk-text-bold uk-text-center uk-form-warning" type="text" value="" maxlength="1" size="1" id="present-3-0">
+          <input class="uk-input uk-form-width-xsmall uk-text-bold uk-text-center uk-form-warning" type="text" value="" maxlength="1" size="1" id="present-3-1">
+          <input class="uk-input uk-form-width-xsmall uk-text-bold uk-text-center uk-form-warning" type="text" value="" maxlength="1" size="1" id="present-3-2">
+          <input class="uk-input uk-form-width-xsmall uk-text-bold uk-text-center uk-form-warning" type="text" value="" maxlength="1" size="1" id="present-3-3">
+          <input class="uk-input uk-form-width-xsmall uk-text-bold uk-text-center uk-form-warning" type="text" value="" maxlength="1" size="1" id="present-3-4">
         </div>
         <div>
-          <input class="uk-input uk-form-width-xsmall uk-text-bold uk-text-center uk-form-warning" type="text" value="." maxlength="1" size="1" id="present-4-0">
-          <input class="uk-input uk-form-width-xsmall uk-text-bold uk-text-center uk-form-warning" type="text" value="." maxlength="1" size="1" id="present-4-1">
-          <input class="uk-input uk-form-width-xsmall uk-text-bold uk-text-center uk-form-warning" type="text" value="." maxlength="1" size="1" id="present-4-2">
-          <input class="uk-input uk-form-width-xsmall uk-text-bold uk-text-center uk-form-warning" type="text" value="." maxlength="1" size="1" id="present-4-3">
-          <input class="uk-input uk-form-width-xsmall uk-text-bold uk-text-center uk-form-warning" type="text" value="." maxlength="1" size="1" id="present-4-4">
+          <input class="uk-input uk-form-width-xsmall uk-text-bold uk-text-center uk-form-warning" type="text" value="" maxlength="1" size="1" id="present-4-0">
+          <input class="uk-input uk-form-width-xsmall uk-text-bold uk-text-center uk-form-warning" type="text" value="" maxlength="1" size="1" id="present-4-1">
+          <input class="uk-input uk-form-width-xsmall uk-text-bold uk-text-center uk-form-warning" type="text" value="" maxlength="1" size="1" id="present-4-2">
+          <input class="uk-input uk-form-width-xsmall uk-text-bold uk-text-center uk-form-warning" type="text" value="" maxlength="1" size="1" id="present-4-3">
+          <input class="uk-input uk-form-width-xsmall uk-text-bold uk-text-center uk-form-warning" type="text" value="" maxlength="1" size="1" id="present-4-4">
         </div>
 
         <h3 class="uk-margin-small-bottom uk-margin-medium-top">Absent</h3>
