--- a/index.html
+++ b/index.html
@@ -2,9 +2,26 @@
 <html>
 <head>
   <title>Wordle Helper</title>
-  <!-- meta data -->
+
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta name="description"          content="A helper for the popular word game Wordle.">
+  <meta name="keywords"             content="wordle, word, helper">
+
+  <meta property="og:locale"        content="en_CA">
+  <meta property="og:type"          content="website">
+  <meta property="og:title"         content="Wordle Helper">
+  <meta property="og:description"   content="A helper for the popular word game Wordle.">
+  <meta property="og:url"           content="https://kcamel.io/wordle">
+  <meta property="og:site_name"     content="kcamel.io">
+  <meta property="og:image"         content="https://www.dailywordle.com/images/wordle_og_1200x630.png">
+
+  <meta name="twitter:card"         content="summary">
+  <meta name="twitter:title"        content="Wordle Helper">
+  <meta name="twitter:description"  content="A helper for the popular word game Wordle.">
+  <meta name="twitter:creator"      content="@kevcamcam">
+  <meta name="twitter:image"        content="https://www.dailywordle.com/images/wordle_og_1200x630.png">
+
   <link rel="stylesheet" href="css/uikit.min.css" />
   <script src="js/uikit.min.js"></script>
   <script src="js/uikit-icons.min.js"></script>
@@ -48,7 +65,7 @@
 <body>
   <div class="uk-section uk-section-small">
     <div class="uk-container uk-container-small">
-      <h1><span>Wordle Helper</span></h1>
+      <h1 class="uk-text-bold">Wordle Helper</h1>
       <p>By <a href="https://kcamel.io">kcamel.io</a></p>
 
       <form class="uk-margin" uk-margin>
