--- a/index.html
+++ b/index.html
@@ -65,8 +65,12 @@
 <body>
   <div class="uk-section uk-section-small">
     <div class="uk-container uk-container-small">
-      <h1 class="uk-text-bold">Wordle Helper</h1>
-      <p>By <a href="https://kcamel.io">kcamel.io</a></p>
+      <h1 class="uk-text-bold">WORDLE HELPER</h1>
+      <p>
+        A helper for the popular word game <a href="https://www.powerlanguage.co.uk/wordle/" target="_blank"><strong>WORDLE</strong></a>.
+        <br/>
+        By <a href="https://kcamel.io" target="_blank">kcamel.io</a>.
+      </p>
 
       <form class="uk-margin" uk-margin>
         <h3 class="uk-margin-small-bottom">Correct</h3>
@@ -79,7 +83,7 @@
           <input class="uk-input uk-form-width-xsmall uk-text-bold uk-text-center uk-form-success" type="text" value="" maxlength="1" size="1" id="correct-4">
         </div>
 
-        <h3 class="uk-margin-small-bottom uk-margin-medium-top">Present</h3>
+        <h3 class="uk-margin-small-bottom">Present</h3>
         <p class="uk-margin-small-bottom">Letter that are in the word but in the wrong spot.</p>
         <div>
           <input class="uk-input uk-form-width-xsmall uk-text-bold uk-text-center uk-form-warning" type="text" value="" maxlength="1" size="1" id="present-0-0">
@@ -117,7 +121,7 @@
           <input class="uk-input uk-form-width-xsmall uk-text-bold uk-text-center uk-form-warning" type="text" value="" maxlength="1" size="1" id="present-4-4">
         </div>
 
-        <h3 class="uk-margin-small-bottom uk-margin-medium-top">Absent</h3>
+        <h3 class="uk-margin-small-bottom">Absent</h3>
         <p class="uk-margin-small-bottom">The letters that are not in the word in any spot.</p>
         <div>
           <input class="uk-input uk-form-width-large uk-form-absent" type="text" placeholder="aeiou" id="absent" maxlength="26" size="26">
