--- a/index.html
+++ b/index.html
@@ -5,62 +5,32 @@
 
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <meta name="description"          content="A helper for the popular word game Wordle.">
+  <meta name="description"          content="A helper for the popular daily word game Wordle.">
   <meta name="keywords"             content="wordle, word, helper">
+  <link href="img/wordle_logo_192x192.png" rel="apple-touch-icon">
+  <link href="img/wordle_logo_32x32.png" rel="icon shortcut">
 
   <meta property="og:locale"        content="en_CA">
   <meta property="og:type"          content="website">
   <meta property="og:title"         content="Wordle Helper">
-  <meta property="og:description"   content="A helper for the popular word game Wordle.">
+  <meta property="og:description"   content="A helper for the popular daily word game Wordle.">
   <meta property="og:url"           content="https://kcamel.io/wordle">
   <meta property="og:site_name"     content="kcamel.io">
-  <meta property="og:image"         content="https://www.dailywordle.com/images/wordle_og_1200x630.png">
+  <meta property="og:image"         content="https://www.kcamel.io/wordle/img/wordle_og_1200x630.png">
 
   <meta name="twitter:card"         content="summary">
   <meta name="twitter:title"        content="Wordle Helper">
-  <meta name="twitter:description"  content="A helper for the popular word game Wordle.">
+  <meta name="twitter:description"  content="A helper for the popular daily word game Wordle.">
   <meta name="twitter:creator"      content="@kevcamcam">
-  <meta name="twitter:image"        content="https://www.dailywordle.com/images/wordle_og_1200x630.png">
+  <meta name="twitter:image"        content="https://www.kcamel.io/wordle/img/wordle_og_1200x630.png">
 
   <link rel="stylesheet" href="css/uikit.min.css" />
+  <link rel="stylesheet" href="css/custom.css" />
+
   <script src="js/uikit.min.js"></script>
   <script src="js/uikit-icons.min.js"></script>
   <script src="js/words.js" type="text/javascript"></script>
   <script src="js/wordle-helper.js" type="text/javascript"></script>
-  <style>
-    h3, p {
-      color: #444;
-    }
-    .uk-label-success {
-      color: #fff;
-      background-color: #75a76b;
-    }
-    .uk-form-success, .uk-form-success:focus {
-      color: #fff;
-      border-color: #75a76b;
-      background-color: #75a76b;
-    }
-
-    .uk-label-warning {
-      color: #fff;
-      background-color: #c8b365;
-    }
-    .uk-form-warning, .uk-form-warning:focus  {
-      color: #fff;
-      border-color: #c8b365;
-      background-color: #c8b365;
-    }
-
-    .uk-label-absent {
-      color: #fff;
-      background-color: #787c7e;
-    }
-    .uk-form-absent, .uk-form-absent:focus {
-      color: #fff;
-      border-color: #787c7e;
-      background-color: #787c7e;
-    }
-  </style>
 </head>
 <body>
   <div class="uk-section uk-section-small">
@@ -76,60 +46,60 @@
         <h3 class="uk-margin-small-bottom">Correct</h3>
         <p class="uk-margin-small-bottom">Letters that are in the word and in the correct spot.</p>
         <div>
-          <input class="uk-input uk-form-width-xsmall uk-text-bold uk-text-center uk-form-success" type="text" value="" maxlength="1" size="1" id="correct-0">
-          <input class="uk-input uk-form-width-xsmall uk-text-bold uk-text-center uk-form-success" type="text" value="" maxlength="1" size="1" id="correct-1">
-          <input class="uk-input uk-form-width-xsmall uk-text-bold uk-text-center uk-form-success" type="text" value="" maxlength="1" size="1" id="correct-2">
-          <input class="uk-input uk-form-width-xsmall uk-text-bold uk-text-center uk-form-success" type="text" value="" maxlength="1" size="1" id="correct-3">
-          <input class="uk-input uk-form-width-xsmall uk-text-bold uk-text-center uk-form-success" type="text" value="" maxlength="1" size="1" id="correct-4">
+          <input class="uk-input uk-text-uppercase uk-form-width-xsmall uk-text-bold uk-text-center uk-form-success" type="text" value="" maxlength="1" size="1" id="correct-0">
+          <input class="uk-input uk-text-uppercase uk-form-width-xsmall uk-text-bold uk-text-center uk-form-success" type="text" value="" maxlength="1" size="1" id="correct-1">
+          <input class="uk-input uk-text-uppercase uk-form-width-xsmall uk-text-bold uk-text-center uk-form-success" type="text" value="" maxlength="1" size="1" id="correct-2">
+          <input class="uk-input uk-text-uppercase uk-form-width-xsmall uk-text-bold uk-text-center uk-form-success" type="text" value="" maxlength="1" size="1" id="correct-3">
+          <input class="uk-input uk-text-uppercase uk-form-width-xsmall uk-text-bold uk-text-center uk-form-success" type="text" value="" maxlength="1" size="1" id="correct-4">
         </div>
 
         <h3 class="uk-margin-small-bottom">Present</h3>
         <p class="uk-margin-small-bottom">Letter that are in the word but in the wrong spot.</p>
         <div>
-          <input class="uk-input uk-form-width-xsmall uk-text-bold uk-text-center uk-form-warning" type="text" value="" maxlength="1" size="1" id="present-0-0">
-          <input class="uk-input uk-form-width-xsmall uk-text-bold uk-text-center uk-form-warning" type="text" value="" maxlength="1" size="1" id="present-0-1">
-          <input class="uk-input uk-form-width-xsmall uk-text-bold uk-text-center uk-form-warning" type="text" value="" maxlength="1" size="1" id="present-0-2">
-          <input class="uk-input uk-form-width-xsmall uk-text-bold uk-text-center uk-form-warning" type="text" value="" maxlength="1" size="1" id="present-0-3">
-          <input class="uk-input uk-form-width-xsmall uk-text-bold uk-text-center uk-form-warning" type="text" value="" maxlength="1" size="1" id="present-0-4">
+          <input class="uk-input uk-text-uppercase uk-form-width-xsmall uk-text-bold uk-text-center uk-form-warning" type="text" value="" maxlength="1" size="1" id="present-0-0">
+          <input class="uk-input uk-text-uppercase uk-form-width-xsmall uk-text-bold uk-text-center uk-form-warning" type="text" value="" maxlength="1" size="1" id="present-0-1">
+          <input class="uk-input uk-text-uppercase uk-form-width-xsmall uk-text-bold uk-text-center uk-form-warning" type="text" value="" maxlength="1" size="1" id="present-0-2">
+          <input class="uk-input uk-text-uppercase uk-form-width-xsmall uk-text-bold uk-text-center uk-form-warning" type="text" value="" maxlength="1" size="1" id="present-0-3">
+          <input class="uk-input uk-text-uppercase uk-form-width-xsmall uk-text-bold uk-text-center uk-form-warning" type="text" value="" maxlength="1" size="1" id="present-0-4">
         </div>
         <div>
-          <input class="uk-input uk-form-width-xsmall uk-text-bold uk-text-center uk-form-warning" type="text" value="" maxlength="1" size="1" id="present-1-0">
-          <input class="uk-input uk-form-width-xsmall uk-text-bold uk-text-center uk-form-warning" type="text" value="" maxlength="1" size="1" id="present-1-1">
-          <input class="uk-input uk-form-width-xsmall uk-text-bold uk-text-center uk-form-warning" type="text" value="" maxlength="1" size="1" id="present-1-2">
-          <input class="uk-input uk-form-width-xsmall uk-text-bold uk-text-center uk-form-warning" type="text" value="" maxlength="1" size="1" id="present-1-3">
-          <input class="uk-input uk-form-width-xsmall uk-text-bold uk-text-center uk-form-warning" type="text" value="" maxlength="1" size="1" id="present-1-4">
+          <input class="uk-input uk-text-uppercase uk-form-width-xsmall uk-text-bold uk-text-center uk-form-warning" type="text" value="" maxlength="1" size="1" id="present-1-0">
+          <input class="uk-input uk-text-uppercase uk-form-width-xsmall uk-text-bold uk-text-center uk-form-warning" type="text" value="" maxlength="1" size="1" id="present-1-1">
+          <input class="uk-input uk-text-uppercase uk-form-width-xsmall uk-text-bold uk-text-center uk-form-warning" type="text" value="" maxlength="1" size="1" id="present-1-2">
+          <input class="uk-input uk-text-uppercase uk-form-width-xsmall uk-text-bold uk-text-center uk-form-warning" type="text" value="" maxlength="1" size="1" id="present-1-3">
+          <input class="uk-input uk-text-uppercase uk-form-width-xsmall uk-text-bold uk-text-center uk-form-warning" type="text" value="" maxlength="1" size="1" id="present-1-4">
         </div>
         <div>
-          <input class="uk-input uk-form-width-xsmall uk-text-bold uk-text-center uk-form-warning" type="text" value="" maxlength="1" size="1" id="present-2-0">
-          <input class="uk-input uk-form-width-xsmall uk-text-bold uk-text-center uk-form-warning" type="text" value="" maxlength="1" size="1" id="present-2-1">
-          <input class="uk-input uk-form-width-xsmall uk-text-bold uk-text-center uk-form-warning" type="text" value="" maxlength="1" size="1" id="present-2-2">
-          <input class="uk-input uk-form-width-xsmall uk-text-bold uk-text-center uk-form-warning" type="text" value="" maxlength="1" size="1" id="present-2-3">
-          <input class="uk-input uk-form-width-xsmall uk-text-bold uk-text-center uk-form-warning" type="text" value="" maxlength="1" size="1" id="present-2-4">
+          <input class="uk-input uk-text-uppercase uk-form-width-xsmall uk-text-bold uk-text-center uk-form-warning" type="text" value="" maxlength="1" size="1" id="present-2-0">
+          <input class="uk-input uk-text-uppercase uk-form-width-xsmall uk-text-bold uk-text-center uk-form-warning" type="text" value="" maxlength="1" size="1" id="present-2-1">
+          <input class="uk-input uk-text-uppercase uk-form-width-xsmall uk-text-bold uk-text-center uk-form-warning" type="text" value="" maxlength="1" size="1" id="present-2-2">
+          <input class="uk-input uk-text-uppercase uk-form-width-xsmall uk-text-bold uk-text-center uk-form-warning" type="text" value="" maxlength="1" size="1" id="present-2-3">
+          <input class="uk-input uk-text-uppercase uk-form-width-xsmall uk-text-bold uk-text-center uk-form-warning" type="text" value="" maxlength="1" size="1" id="present-2-4">
         </div>
         <div>
-          <input class="uk-input uk-form-width-xsmall uk-text-bold uk-text-center uk-form-warning" type="text" value="" maxlength="1" size="1" id="present-3-0">
-          <input class="uk-input uk-form-width-xsmall uk-text-bold uk-text-center uk-form-warning" type="text" value="" maxlength="1" size="1" id="present-3-1">
-          <input class="uk-input uk-form-width-xsmall uk-text-bold uk-text-center uk-form-warning" type="text" value="" maxlength="1" size="1" id="present-3-2">
-          <input class="uk-input uk-form-width-xsmall uk-text-bold uk-text-center uk-form-warning" type="text" value="" maxlength="1" size="1" id="present-3-3">
-          <input class="uk-input uk-form-width-xsmall uk-text-bold uk-text-center uk-form-warning" type="text" value="" maxlength="1" size="1" id="present-3-4">
+          <input class="uk-input uk-text-uppercase uk-form-width-xsmall uk-text-bold uk-text-center uk-form-warning" type="text" value="" maxlength="1" size="1" id="present-3-0">
+          <input class="uk-input uk-text-uppercase uk-form-width-xsmall uk-text-bold uk-text-center uk-form-warning" type="text" value="" maxlength="1" size="1" id="present-3-1">
+          <input class="uk-input uk-text-uppercase uk-form-width-xsmall uk-text-bold uk-text-center uk-form-warning" type="text" value="" maxlength="1" size="1" id="present-3-2">
+          <input class="uk-input uk-text-uppercase uk-form-width-xsmall uk-text-bold uk-text-center uk-form-warning" type="text" value="" maxlength="1" size="1" id="present-3-3">
+          <input class="uk-input uk-text-uppercase uk-form-width-xsmall uk-text-bold uk-text-center uk-form-warning" type="text" value="" maxlength="1" size="1" id="present-3-4">
         </div>
         <div>
-          <input class="uk-input uk-form-width-xsmall uk-text-bold uk-text-center uk-form-warning" type="text" value="" maxlength="1" size="1" id="present-4-0">
-          <input class="uk-input uk-form-width-xsmall uk-text-bold uk-text-center uk-form-warning" type="text" value="" maxlength="1" size="1" id="present-4-1">
-          <input class="uk-input uk-form-width-xsmall uk-text-bold uk-text-center uk-form-warning" type="text" value="" maxlength="1" size="1" id="present-4-2">
-          <input class="uk-input uk-form-width-xsmall uk-text-bold uk-text-center uk-form-warning" type="text" value="" maxlength="1" size="1" id="present-4-3">
-          <input class="uk-input uk-form-width-xsmall uk-text-bold uk-text-center uk-form-warning" type="text" value="" maxlength="1" size="1" id="present-4-4">
+          <input class="uk-input uk-text-uppercase uk-form-width-xsmall uk-text-bold uk-text-center uk-form-warning" type="text" value="" maxlength="1" size="1" id="present-4-0">
+          <input class="uk-input uk-text-uppercase uk-form-width-xsmall uk-text-bold uk-text-center uk-form-warning" type="text" value="" maxlength="1" size="1" id="present-4-1">
+          <input class="uk-input uk-text-uppercase uk-form-width-xsmall uk-text-bold uk-text-center uk-form-warning" type="text" value="" maxlength="1" size="1" id="present-4-2">
+          <input class="uk-input uk-text-uppercase uk-form-width-xsmall uk-text-bold uk-text-center uk-form-warning" type="text" value="" maxlength="1" size="1" id="present-4-3">
+          <input class="uk-input uk-text-uppercase uk-form-width-xsmall uk-text-bold uk-text-center uk-form-warning" type="text" value="" maxlength="1" size="1" id="present-4-4">
         </div>
 
         <h3 class="uk-margin-small-bottom">Absent</h3>
         <p class="uk-margin-small-bottom">The letters that are not in the word in any spot.</p>
         <div>
-          <input class="uk-input uk-form-width-large uk-form-absent" type="text" placeholder="aeiou" id="absent" maxlength="26" size="26">
+          <input class="uk-input uk-text-uppercase uk-form-width-large uk-form-absent" type="text" id="absent" maxlength="26" size="26">
         </div>
-        <button class="uk-button uk-button-primary" type="button" onclick="getOpenList();">GET WORDS</button>
       </form>
 
-      <h3><span class="uk-label uk-label" id="resultCount">0</span> Possible Words</h3>
+      <h3 class="uk-margin-small-bottom uk-margin-small-top">Possible Words <span class="uk-label uk-label" id="resultCount">0</span></h3>
+      <button class="uk-button uk-button-primary" type="buttoon" onclick="getOpenList();">GET WORDS</button>
       <div id="result"></div>
     </div>
   </div>
