--- a/index.html
+++ b/index.html
@@ -27,10 +27,11 @@
   <link rel="stylesheet" href="css/uikit.min.css" />
   <link rel="stylesheet" href="css/custom.css" />
 
-  <script src="js/uikit.min.js"></script>
-  <script src="js/uikit-icons.min.js"></script>
-  <script src="js/words.js" type="text/javascript"></script>
-  <script src="js/wordle-helper.js" type="text/javascript"></script>
+  <script src="js/uikit.min.js" async></script>
+  <script src="js/uikit-icons.min.js" async></script>
+  <script src="js/words.js" async></script>
+  <script src="js/wordle-helper.js" async></script>
+  <script src="js/splitbee.js" async></script>
 </head>
 <body>
   <div class="uk-section uk-section-small">
