adds splitbee analytics

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
   <script src="js/uikit-icons.min.js" async></script>
   <script src="js/words.js" async></script>
   <script src="js/wordle-helper.js" async></script>
-  <script src="js/splitbee.js" async></script>
+  <script src="https://cdn.splitbee.io/sb.js"async></script>
 </head>
 <body>
   <div class="uk-section uk-section-small">
