--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta name="description"          content="A helper for the popular daily word game Wordle.">
-  <meta name="keywords"             content="wordle, word, helper">
+  <meta name="keywords"             content="wordle, word, helper, solver, calculator">
   <link href="img/wordle_logo_192x192.png" rel="apple-touch-icon">
   <link href="img/wordle_logo_32x32.png" rel="icon shortcut">
 
