update wordle URL

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
     <div class="uk-container uk-container-small">
       <h1 class="uk-text-bold">WORDLE HELPER</h1>
       <p>
-        A helper for the popular word game <a href="https://www.powerlanguage.co.uk/wordle/" target="_blank"><strong>WORDLE</strong></a>.
+        A helper for the popular word game <a href="https://www.nytimes.com/games/wordle/index.html" target="_blank"><strong>WORDLE</strong></a>.
         <br/>
         By <a href="https://kcamel.io" target="_blank">kcamel.io</a>.
       </p>
